--- a/css/navbar.css
+++ b/css/navbar.css
@@ -6,6 +6,8 @@
 
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-color: #f8b195;
+  color: black;
 }
 
 a {
@@ -62,7 +64,7 @@ li {
 }
 
 .dropdown {
-  background-color: #355c7d;
+  background-color: #c06c84;
   padding: 1 em 0;
   position: absolute;
   display: none;
@@ -81,7 +83,7 @@ li {
 }
 
 .dropdown li:hover {
-  background-color: #1f4c74;
+  background-color: #c06c84;
 }
 
 .options:hover .dropdown {
@@ -98,3 +100,44 @@ input[type="checkbox"] {
 }
 
 /*Responsive Design */
+
+@media (max-width: 768px) {
+  .menu {
+    display: none;
+    position: absolute;
+    background-color: #c06c84;
+
+    right: 0;
+    left: 0;
+    text-align: center;
+    padding: 16px 0;
+  }
+
+  .menu li:hover {
+    display: inline-block;
+    background-color: #c7899b;
+    transition: 0.3s ease;
+  }
+
+  .menu li + li {
+    margin-top: 12px;
+  }
+
+  input[type="checkbox"]:checked ~ .menu {
+    display: block;
+  }
+
+  .hamburger {
+    display: block;
+  }
+
+  .dropdown {
+    left: 50%;
+    top: 30px;
+    transform: translateX(35%);
+  }
+
+  .dropdown li:hover {
+    background-color: #c7899b;
+  }
+}
