--- a/css/navbar.css
+++ b/css/navbar.css
@@ -42,7 +42,7 @@ li {
 }
 
 .logo:hover {
-  transition: width 2s, height 2s, transform 3s;
+  transition: width 2s, height 2s, transform 1s;
 }
 
 /*psuedo class*/
@@ -87,7 +87,7 @@ li {
 }
 
 .dropdown li:hover {
-  background-color: #c06c84;
+  background-color: #bd8595;
 }
 
 .options:hover .dropdown {
@@ -119,12 +119,16 @@ input[type="checkbox"] {
 
   .menu li:hover {
     display: inline-block;
-    background-color: #c7899b;
+    background-color: #bd929e;
     transition: 0.3s ease;
   }
 
   .menu li + li {
     margin-top: 12px;
+  }
+
+  .logo:hover {
+    transform: rotateX(80deg);
   }
 
   input[type="checkbox"]:checked ~ .menu {
